fixing wrong wrap of line on .card-content

--- a/styles/produtos.css
+++ b/styles/produtos.css
@@ -214,6 +214,9 @@
       max-width: 40em;
       margin: 10px;
     }
+    .card-content{
+      padding: 10px;
+    }
 
     .container div img {
       height: 10em;
